# taskwarrior3lib-rs

./: .gitignore  Cargo.toml  GETTING_STARTED.md  README.md  USAGE_FOR_LLM.md  devenv.nix
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.taskwarrior/: tasks.json
.taskwarrior/backups/: tasks_1758219117.json  tasks_1758220092.json
benches/: date_parsing.rs  query_performance.rs
docs/: usage.md
examples/taskwarrior-sample/: Cargo.toml  README.md  sample_tasks.json
examples/taskwarrior-sample/src/: app.rs  cli.rs  lib.rs  main.rs  models.rs
examples/taskwarrior-sample/src/commands/: add.rs  done.rs  edit.rs  list.rs  mod.rs
examples/taskwarrior-sample/tests/: contract_test_add.rs  contract_test_done.rs  contract_test_edit.rs  contract_test_list.rs  integration_test_errors.rs  integration_test_lifecycle.rs  unit_test_parsing.rs  unit_test_validation.rs
specs/001-a-rust-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-create-an-sample/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-if-a-context/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-implement-a-full/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: context.rs  error.rs  lib.rs
src/config/: context.rs  discovery.rs  mod.rs
src/date/: mod.rs  parser.rs  relative.rs  synonyms.rs
src/hooks/: README.md  config.rs  events.rs  executor.rs  integration_test.rs  manager.rs  mod.rs
src/io/: export.rs  import.rs  import_old.rs  mod.rs  process_runner.rs
src/query/: builder.rs  filter.rs  filters.rs  mod.rs
src/reports/: mod.rs  (+1 more)
tests/: helper_contract.rs  integration_taskchampion.rs  integration_taskchampion_update_delete.rs  integration_test.rs  integration_test_fixed.rs  map_ops_to_tc_ops_unit.rs  operation_batch_tests.rs  replica_commit.rs  replica_taskchampion_mapping.rs  run_sync_helper.rs  sync_helpers.rs  taskchampion_write_tests.rs
(+36 files in other folders)
