[package]
name = "taskwarrior3lib"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A Rust library for interacting with Taskwarrior 3.x (TaskChampion backend)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/taskwarrior3lib-rs"
keywords = ["taskwarrior", "productivity", "task-management", "cli-tools"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Regular expressions
regex = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Database support
rusqlite = { version = "0.32", features = ["bundled"] }

# XDG directory discovery
dirs = "5.0"

# Optional async support
tokio = { version = "1.0", features = ["full"], optional = true }

# Optional TaskChampion integration (local SQLite replica)
taskchampion = { version = "2", optional = true }

[dev-dependencies]
# Testing utilities
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
assert_matches = "1.5"

[features]
default = []
async = ["tokio"]
taskchampion = ["dep:taskchampion"]

[[bench]]
name = "query_performance"
harness = false

[[bench]]
name = "date_parsing"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
debug = true