[package]
name = "taskwarrior-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
taskwarrior3lib = { path = "../../" }
taskchampion = "2.0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
uuid = "1.0"
chrono = "0.4"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.3"
